--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/bundle/dracula-theme"]
 	path = vim/bundle/dracula-theme
 	url = https://github.com/dracula/vim.git
+[submodule "slimzsh/external/ltv"]
+	path = slimzsh/external/ltv
+	url = git@bitbucket.org:asobrien/ltv-dotfiles.git
