new tnux options

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,34 @@
 # Source version specific configuration
-if-shell "[[ `tmux -V | cut -d ' ' -f2 | sed 's/[a\.]//g'` -ge 21 ]]" \
-            'source ~/.dotfiles/tmux/tmux_ge_21.conf' \
-            'source ~/.dotfiles/tmux/tmux_lt_21.conf'
+# if-shell "[[ `tmux -V | cut -d ' ' -f2 | sed 's/[a\.]//g'` -ge 21 ]]" \
+#             'source ~/.dotfiles/tmux/tmux_ge_21.conf' \
+#             'source ~/.dotfiles/tmux/tmux_lt_21.conf'
 
 # sensible defaults
-set -g history-limit 50000
+set -g history-limit 15000
+
+# base configuration
+set -g mouse off
+set -g prefix C-a
+unbind C-b
+set -s escape-time 1
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+set -g default-terminal "screen-256color"
+
+# Pane splitting
+bind | split-window -h
+bind - split-window -v
+
+# Pane selection
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Pane resizing
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 # SRC: https://raw.githubusercontent.com/jimeh/tmux-themepack/master/basic.tmuxtheme
 # Status update interval
@@ -27,6 +51,7 @@ set -g status-right-length 40
 set -g status-right "#h #[fg=white]« #[fg=yellow]%H:%M:%S #[fg=green]%d-%b-%y"
 
 # Window status
+set -g base-index 1
 set -g window-status-format " #I:#W#F "
 set -g window-status-current-format " #I:#W#F "
 
@@ -53,6 +78,7 @@ set -g pane-active-border-bg default
 set -g pane-active-border-fg green
 
 # Pane number indicator
+setw -g pane-base-index 1
 set -g display-panes-colour default
 set -g display-panes-active-colour default
 
