--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,8 +8,9 @@ set -g history-limit 15000
 
 # base configuration
 set -g mouse off
-set -g prefix C-a
-unbind C-b
+# Ctrl-a is my *favorite* emacs command!
+#set -g prefix C-a
+#unbind C-b
 set -s escape-time 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 set -g default-terminal "screen-256color"
