screen: come to the dark side

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # use control+a as a prefix like screen
-# set-option -g prefix C-a
-# unbind-key C-b
-# bind-key C-a send-prefix
+set-option -g prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
 
 bind-key space next-window
 
