--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
 	fixup = rebase -i HEAD~5
 	graph = log --oneline --all --graph --decorate
 	what = whatchanged -p --abbrev-commit --pretty=medium
+	on = rev-parse --abbrev-ref HEAD
 [push]
 	default = simple
 [user]
