--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
 	recent = branch --sort=-committerdate
 	track = "!git branch --set-upstream-to=origin/$(git on) $(git on)"
 	pr = "!github-pr"
+	cleanup = "!git-cleanup"
 [push]
 	default = current
 [user]
