--- a/.gitconfig
+++ b/.gitconfig
@@ -33,6 +33,8 @@
 	rebase = true
 [push]
 	default = nothing
+[rebase]
+	autoSquash = true
 [url "git@github.com:"]
 	insteadOf = https://github.com/
 [spr]
