[git] rebase.autostash=true

--- a/.gitconfig
+++ b/.gitconfig
@@ -36,6 +36,7 @@
 	default = nothing
 [rebase]
 	autoSquash = true
+	autoStash = true
 [url "git@github.com:"]
 	insteadOf = https://github.com/
 [spr]
